[package]
name = "hackmap-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
windows-sys = { version = "0.52.0", features = ["Win32_System_WindowsProgramming", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug_Extensions"] }
windows-targets = "0.52.5"
