[package]
name = "hackmap-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = 'D2Sigma'
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
ml = { version = "0.1.0", path = "../../../Rust/ml", features = ["hooker"] }
windows-sys = { version = "0.52.0", features = ["Win32_System_WindowsProgramming", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug_Extensions"] }
windows-targets = "0.52.5"
